force-app/main/default/objects/EGPTConfiguration__c/EGPTConfiguration__c.object-meta.xml
<CustomObject>
    <label>EinsteinGPT Configuration</label>
    <nameField>
        <label>EinsteinGPT Demo Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EinsteinGPT Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>