force-app/main/default/objects/EGPTConfiguration__c/fields/AssistantUnknownAnswerResponse__c.field-meta.xml
<CustomField>
    <fullName>AssistantUnknownAnswerResponse__c</fullName>
    <label>Unknown Answer Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>