force-app/main/default/objects/EGPTConfiguration__c/fields/CaseIssue__c.field-meta.xml
<CustomField>
    <fullName>CaseIssue__c</fullName>
    <label>CaseIssue</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>