force-app/main/default/objects/EGPTConfiguration__c/fields/emailFrom__c.field-meta.xml
<CustomField>
    <fullName>emailFrom__c</fullName>
    <label>emailFrom</label>
    <length>100</length>
    <type>Text</type>
</CustomField>