force-app/main/default/objects/EGPTConfiguration__c/fields/emailSubject__c.field-meta.xml
<CustomField>
    <fullName>emailSubject__c</fullName>
    <label>emailSubject</label>
    <length>200</length>
    <type>Text</type>
</CustomField>