force-app/main/default/objects/EGPTConfiguration__c/fields/emailTo__c.field-meta.xml
<CustomField>
    <fullName>emailTo__c</fullName>
    <label>emailTo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>