force-app/main/default/objects/EGPTConfiguration__c/fields/SalesFeaturedAccount__c.field-meta.xml
<CustomField>
    <fullName>SalesFeaturedAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Featured Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>EinsteinGPT Configuration</relationshipLabel>
    <relationshipName>EinsteinGPT_Configuration</relationshipName>
    <type>Lookup</type>
</CustomField>