force-app/main/default/objects/EGPTConfiguration__c/fields/ServiceAgentName__c.field-meta.xml
<CustomField>
    <fullName>ServiceAgentName__c</fullName>
    <label>Agent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>