force-app/main/default/objects/EGPTConfiguration__c/fields/ServiceCaseSummary__c.field-meta.xml
<CustomField>
    <fullName>ServiceCaseSummary__c</fullName>
    <label>Case Summary</label>
    <type>TextArea</type>
</CustomField>