force-app/main/default/objects/EGPTConfiguration__c/fields/ServiceContactAvatar__c.field-meta.xml
<CustomField>
    <fullName>ServiceContactAvatar__c</fullName>
    <label>Contact Avatar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>