force-app/main/default/objects/EGPTConfiguration__c/fields/ServiceContactEmail__c.field-meta.xml
<CustomField>
    <fullName>ServiceContactEmail__c</fullName>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>