force-app/main/default/objects/EGPTConfiguration__c/fields/ServiceContactInitials__c.field-meta.xml
<CustomField>
    <fullName>ServiceContactInitials__c</fullName>
    <label>Contact Initials</label>
    <length>255</length>
    <type>Text</type>
</CustomField>