force-app/main/default/objects/EGPTConfiguration__c/fields/ServiceContactName__c.field-meta.xml
<CustomField>
    <fullName>ServiceContactName__c</fullName>
    <label>Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>