force-app/main/default/objects/EGPTConfiguration__c/fields/ServiceContactPhone__c.field-meta.xml
<CustomField>
    <fullName>ServiceContactPhone__c</fullName>
    <label>Contact Phone</label>
    <type>Phone</type>
</CustomField>