force-app/main/default/objects/EGPTConfiguration__c/fields/ServiceKnowledgeArticleTitle__c.field-meta.xml
<CustomField>
    <fullName>ServiceKnowledgeArticleTitle__c</fullName>
    <label>Knowledge Article Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>