force-app/main/default/objects/EGPTConfiguration__c/fields/ServiceStartingMessage__c.field-meta.xml
<CustomField>
    <fullName>ServiceStartingMessage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Starting Message</label>
    <referenceTo>ChatResponse__c</referenceTo>
    <relationshipLabel>EinsteinGPT Configuration</relationshipLabel>
    <relationshipName>EinsteinGPT_Configuration</relationshipName>
    <type>Lookup</type>
</CustomField>